; ModuleID = '/home/carl/AnghaBench/linux/fs/afs/extr_cell.c_afs_queue_cell_manager.c'
source_filename = "/home/carl/AnghaBench/linux/fs/afs/extr_cell.c_afs_queue_cell_manager.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.afs_net = type { i32, i32 }

@.str = private unnamed_addr constant [3 x i8] c"%d\00", align 1
@afs_wq = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.afs_net*)* @afs_queue_cell_manager to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @afs_queue_cell_manager(%struct.afs_net* %0) #0 {
  %2 = alloca %struct.afs_net*, align 8
  %3 = alloca i32, align 4
  store %struct.afs_net* %0, %struct.afs_net** %2, align 8
  %4 = load %struct.afs_net*, %struct.afs_net** %2, align 8
  %5 = getelementptr inbounds %struct.afs_net, %struct.afs_net* %4, i32 0, i32 1
  %6 = call i32 @atomic_inc_return(i32* %5)
  store i32 %6, i32* %3, align 4
  %7 = load i32, i32* %3, align 4
  %8 = call i32 @_enter(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str, i64 0, i64 0), i32 %7)
  %9 = load i32, i32* @afs_wq, align 4
  %10 = load %struct.afs_net*, %struct.afs_net** %2, align 8
  %11 = getelementptr inbounds %struct.afs_net, %struct.afs_net* %10, i32 0, i32 0
  %12 = call i32 @queue_work(i32 %9, i32* %11)
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %17, label %14

14:                                               ; preds = %1
  %15 = load %struct.afs_net*, %struct.afs_net** %2, align 8
  %16 = call i32 @afs_dec_cells_outstanding(%struct.afs_net* %15)
  br label %17

17:                                               ; preds = %14, %1
  ret void
}

declare dso_local i32 @atomic_inc_return(i32*) #1

declare dso_local i32 @_enter(i8*, i32) #1

declare dso_local i32 @queue_work(i32, i32*) #1

declare dso_local i32 @afs_dec_cells_outstanding(%struct.afs_net*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
